# FlightSim

./: CMakeLists.txt  Doxyfile  INSTALL  README  shadow.sh
data/: fighter.ply
doc/: README
models/: fighter.blend
po/: CMakeLists.txt  en_US.po  install_mo.sh  make_mo.sh  make_po.sh  make_pot.sh  pl_PL.po
src/: application.cpp  application.h  bindings.cpp  bindings.h  bullet.cpp  bullet.h  common.cpp  common.h  config.h.cmake  console.cpp  console.h  controls.cpp  controls.h  decorator.cpp  decorator.h  dialog.cpp  dialog.h  events.h  filemanager.cpp  filemanager.h  fontengine.cpp  fontengine.h  fractal.cpp  fractal.h  gamedialog.cpp  gamedialog.h  label.cpp  label.h  main.cpp  map.cpp  map.h  mapdialog.cpp  mapdialog.h  menu.cpp  menu.h  model.cpp  model.h  object.cpp  object.h  player.cpp  (+15 more)
